# ximacro

./: .gitignore  .prettierrc  CHANGELOG.md  LICENSE.md  README.md  forge.config.ts  index.html  installer.ifp  package.json  tsconfig.json  vite.renderer.config.ts
c-src/: .gitignore  CMakeLists.txt  build.sh  build_clean.sh
c-src/src/: __main.c  books.c  chars.c  export.c  import.c
src/: app.tsx  index.css  main.ts  preload.ts  types.d.ts
src/components/: alert.tsx  button.tsx  character-button.tsx  clearable-input.tsx  collapse.tsx  container.tsx  dialog.tsx  loading.tsx  screen-error.tsx  select-menu.tsx
src/contexts/: app-provider.tsx
src/ipc/: handlers.ts
src/layout/: footer.tsx  header.tsx  layout.tsx
src/lib/: format.ts
src/screens/add-character/: index.tsx
src/screens/character/: book-view.tsx  export-import.tsx  index.tsx  macro-form.tsx  macro-grid.tsx  macro-list-item.tsx
src/screens/main/: index.tsx
src/screens/settings/: index.tsx
